[project]
name = "dva-c02-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "attrs==24.2.0",
    "aws-sam-translator==1.91.0",
    "boto3==1.35.54",
    "botocore==1.35.54",
    "certifi==2024.8.30",
    "cfn-lint==1.19.0",
    "click==8.1.7",
    "Flask==2.2.2",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "MarkupSafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "referencing==0.35.1",
    "regex==2024.9.11",
    "ruff==0.9.4",
    "rpds-py==0.20.1",
    "s3transfer==0.10.3",
    "six==1.16.0",
    "sympy==1.13.3",
    "typing_extensions==4.12.2",
    "urllib3==2.2.3",
    "Werkzeug==3.1.3",
]
